# chemoinformatics-admet-project

./: .gitignore  README.md
data/zipped/: molecules_incomplete_endpoints.rar  molecules_smiles.rar
etl_linux/: README.md  pyproject.toml
etl_linux/src/etl_linux/: __main__.py
etl_linux/src/etl_linux.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
etl_linux/src/etl_linux/configs/: configs_log.py  configs_path.py
etl_linux/src/etl_linux/utils/: pytdc_endpoints.py
research_process/: pyproject.toml
research_process/src/notebooks/: tests.ipynb
research_process/src/research_process/: __main__.py
research_process/src/research_process/clustering/: pretuning.py
research_process/src/research_process/configs/: configs_log.py
research_process/src/research_process/preprocess/: cleaning.py  enrichment.py  summarization.py
research_process/src/research_process/utils/: pytdc_endpoints.py  rdkit_descriptors.py
